# gpt_query_example

./: README.md  pyproject.toml  requirements.txt
moby_dick/: moby_dick.txt
src/gpt_query_example/: __init__.py  example.py
